# zozobra

./: .gitignore  CMakeLists.txt  README.md
tetris_zozobra/: codigos_retorno.h  estados.h  fin_juego.c  fin_juego.h  fuentes.c  fuentes.h  ingreso_nombre.c  ingreso_nombre.h  juego.c  juego.h  main.c  menu_principal.c  menu_principal.h  pausa.c  pausa.h  render.c  render.h  tablero.c  tablero.h  tetris_zozobra.cbp  tetris_zozobra.depend  tetromino.c  tetromino.h  utils.c  utils.h
